--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,8 @@
-/* 
-    General Styles
-*/
+.delete-btn:hover {
+    background-color: darkred;
+  }
+.contact-card{
+    border: 1px solid black;
+    background-color: rgb(0, 194, 212);
+    color: black;
+}
